--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-url: https://zackwong.github.io
+url: https://catbabe.github.io
 
-title: Select Web
+title: Catbabe
 
-keywords: 顺德SEO,顺德网站建设,顺德网站推广,顺德网络营销
+keywords: 海尾民生事，今日知多少？
 
-description: Select Web是分享顺德SEO、网站建设、网站推广和网络营销的博客，为企业提供专业的SEO、网站建设、网站推广和网络营销顾问服务。
+description: Catbabe-海尾民生事是一个分享海尾的吃、喝、玩、乐、新鲜事、民生事，让更多的朋友了解海尾，爱上海尾。
 
 exclude:
   - README.md
